<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">HeppiHome</string>
    <string name="Calendar">Calendar</string>
    <string name="NewGroup">New Group</string>
    <string name="JoinGroup">Join Group</string>
    <string name="LeaveGroup">Leave Group</string>
    <string name="GroupName">Name Of Group</string>
    <string name="Description">Description</string>
    <string name="Add">Add</string>
    <string name="Cancel">Cancel</string>
    <string name="Groups">Groups</string>
    <string name="AllTasks">All tasks</string>
    <string name="Settings">Settings</string>
    <string name="Profile">Profile</string>
    <string name="Notifications">Notifications</string>
    <string name="Language">Language</string>
    <string name="Help">Help</string>
    <string name="Theme">Theme</string>
    <string name="Edit">Edit</string>
    <string name="EditGroup">Edit Group</string>
    <string name="InviteToGroup">Invite someone for this group</string>
    <string name="Invite">Invite</string>
    <string name="GotInvite">You got invited to a group by:\ </string>
    <string name="AcceptOrDeclineInvite">Accept or Decline this invite.</string>
    <string name="Accept">Accept</string>
    <string name="Decline">Decline</string>
    <string name="Invites">Invites</string>
    <string name="Email">email</string>
    <string name="InvitePerson">Invite this person</string>
    <string name="YourInvites">Your invites</string>
    <string name="NoInvites">You have not been invited to any groups</string>
    <string name="InviteFrom">Invite from:\ </string>
    <string name="Task">Task</string>
    <string name="AddTask">Add Task</string>
    <string name="TaskForPerson">This task is for:\ </string>
    <string name="OpenDatePicker">Open Date Picker</string>
    <string name="OpenTimePicker">Open Time Picker</string>
    <string name="SelectedDate">Selected Date:\ </string>
    <string name="SelectedTime">Selected Time:\ </string>
    <string name="LogOut">Log out</string>
    <string name="Loading">Loading</string>
    <string name="FeedbackGroupEdited">Group has been edited</string>
    <string name="FeedbackGroupDeleted">Group has been deleted</string>
    <string name="No">No</string>
    <string name="Yes">Yes</string>
    <string name="Tasks">Tasks</string>
    <string name="NoTasksDue">No tasks due on\ </string>
    <string name="TasksOnDate">view tasks on\ </string>

    <!-- FireBase -->
    <string name="fui_progress_dialog_loading" translation_description="Loading text in dialog">Loading…</string>
    <string name="fui_sign_in_default" translation_description="Button text to sign in">Sign in</string>
    <string name="fui_continue" translation_description="Button text to continue">Continue</string>
    <string name="fui_no_internet" translation_descripition="User message shown when sign-in is attempted while offline.">Network error, check your internet connection.</string>

    <!-- Provider -->
    <string name="fui_idp_name_email">Email</string>

    <!-- Common-->
    <string name="fui_next_default" translation_description="Button text to continue">Next</string>
    <string name="fui_email_hint" translation_description="Hint in email input field">Email</string>
    <string name="fui_password_hint" translation_description="Hint for password input field for existing passwords">Password</string>
    <string name="fui_new_password_hint" translation_description="Hint for password input field for new passwords">New password</string>
    <string name="fui_required_field" translation_description="Inline error for required field">You can\'t leave this empty.</string>
    <string name="fui_invalid_email_address" translation_description="Inline error for invalid email address">That email address isn\'t correct</string>
    <string name="fui_missing_email_address" translation_description="Inline error for empty email address in input field">Enter your email address to continue</string>
    <string name="fui_missing_first_and_last_name" translation_description="Inline error for empty email address in input field. [CHAR_LIMIT=60]">Please enter a first and last name.</string>
    <string name="fui_progress_dialog_checking_accounts" translation_description="Progress dialog text while checking for existing accounts">Checking for existing accounts…</string>

    <!-- Email sign up -->
    <string name="fui_title_register_email" translation_description="Title for signup form">Sign up</string>
    <string name="fui_name_hint" translation_description="Hint for last name input field">First &amp; last name</string>
    <string name="fui_button_text_save" translation_description="Button text to save input form">Save</string>
    <string name="fui_progress_dialog_signing_up" translation_description="Dialog text while waiting for server's signup response">Signing up…</string>
    <plurals name="fui_error_weak_password" translation_description="Inline error for weak password">
        <item quantity="one" translation_description="Inline error for weak password">Password not strong enough. Use at least %1$d character and a mix of letters and numbers</item>
        <item quantity="other" translation_description="Inline error for weak password">Password not strong enough. Use at least %1$d characters and a mix of letters and numbers</item>
    </plurals>
    <string name="fui_email_account_creation_error" translation_description="Inline error for signup failure">Email account registration unsuccessful</string>

    <!-- Idp/Email welcome back -->
    <string name="fui_title_welcome_back_idp_prompt" translatable="false">@string/fui_sign_in_default</string>
    <string name="fui_title_welcome_back_password_prompt" translatable="false">@string/fui_sign_in_default</string>
    <string name="fui_welcome_back_email_header" translation_description="Message for returning users">Welcome back!</string>

    <string name="fui_welcome_back_password_prompt_body" translation_description="Message to users that need to signin using existing email accounts">
        You\'ve already used <xliff:g example="jane.doe@example.com" id="email_addr" translation_description="">%1$s</xliff:g>
        to sign in. Enter your password for that account.
    </string>
    <string name="fui_progress_dialog_signing_in" translation_description="Progress dialog text">Signing in…</string>
    <string name="fui_trouble_signing_in" translation_description="Link leading to forgot password flow">Trouble signing in?</string>

    <!-- Other error messages -->
    <string name="fui_error_unknown" translation_description="General error messages for an unknown failure.">An unknown error occurred.</string>
    <string name="fui_error_invalid_password" translation_description="Error message for when the user enters an invalid or wrong password.">Incorrect password.</string>
    <!-- end of FireBase resources -->

    <string name="Today">today</string>
    <string name="Tomorrow">tomorrow</string>
    <string name="ResignAdmin">Resign as admin</string>
    <string name="MakeAdmin">Make someone admin</string>
    <string name="NoTasks">No tasks</string>
    <string name="MadeAdmin">Person has been made admin.</string>
    <string name="ChooseWhoAdmin">Choose who to make admin:</string>
    <string name="MakeUserAdmin">Do you want to make <xliff:g user="user" example="Admin">%s</xliff:g>  admin?</string>
    <string name="WantToLeaveGroup">Do you want to leave this group?</string>
    <string name="NewReward">New Reward</string>
    <string name="RewardName">Reward name</string>
    <string name="NumberOfPoints">How many points?</string>
    <string name="EditReward">Edit Reward</string>
    <string name="Inventory">Inventory</string>
    <string name="CashInReward">Do you want to cash in this reward?</string>
    <string name="CashIn">Cash in</string>
    <string name="PurchaseSuccessful">Successfully bought this item!</string>
    <string name="Shop">Shop</string>
    <string name="YouCurrentlyHave">You currently have\ </string>
    <string name="PointsShort">pts</string>
    <string name="PtsBuy">\ pts   BUY</string>
    <string name="NotEnoughPoints">You do not have enough points to buy this reward</string>
    <string name="Points">Points</string>
    <string name="CantResignAdmin">You can\'t resign as admin since you are the last admin of the group</string>
    <string name="Overview">Overview</string>


</resources>